examples/bad/hold_for_continue_carried.mko
// Must fail: for-range continue-path move is loop-carried (same as while).
fn consume(t: string) {}

fn main() {
    hold let s = "hi"
    for i in range 3 {
        if i == 0 {
            consume(s)
            continue
        }
        print(s)
        break
    }
}
